--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -44,7 +44,7 @@ admin_5 : "🥀ᴍᴜsɪᴄ ɪs ᴀʟʀᴇᴀᴅʏ ᴍᴜᴛᴇᴅ."
 admin_6 : "🎧 ᴠᴏɪᴄᴇᴄʜᴀᴛ ᴍᴜᴛᴇᴅ ʙʏ {} !"
 admin_7 : "🌹ᴍᴜsɪᴄ ɪs ᴀʟʀᴇᴀᴅʏ ᴜɴᴍᴜᴛᴇᴅ."
 admin_8 : "🎧 ᴠᴏɪᴄᴇᴄʜᴀᴛ ᴜɴᴍᴜᴛᴇᴅ ʙʏ {} !"
-admin_9 : "➻ **sᴛʀᴇᴀᴍ ᴇɴᴅᴇᴅ/sᴛᴏᴩᴩᴇᴅ** 🥵\n│ \n└ʙʏ : {} 🥀"
+admin_9 : "➻ **sᴛʀᴇᴀᴍ sᴏɴɢ ᴠᴇɴᴀ ᴘᴏᴅᴀ ᴇɴᴅᴇᴅ/sᴛᴏᴩᴩᴇᴅ** 🥵\n│ \n└ʙʏ : {} 🥀"
 admin_10 : "➻ sᴛʀᴇᴀᴍ sᴋɪᴩᴩᴇᴅ 😍\n│ \n└ʙʏ : {0} 🥀\n\n**» ɴᴏ ᴍᴏʀᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋs ɪɴ** {1}, **ʟᴇᴀᴠɪɴɢ ᴠɪᴅᴇᴏᴄʜᴀᴛ.**"
 admin_11 : "ᴇʀʀᴏʀ ᴡʜɪʟᴇ ᴄʜᴀɴɢɪɴɢ sᴛʀᴇᴀᴍ ᴛᴏ **{0}** ᴍʏ ʟᴏᴠᴇ ​🌹\n\nᴘʟᴇᴀsᴇ ᴜsᴇ /skip ᴀɢᴀɪɴ."
 admin_12 : "ᴜɴᴀʙʟᴇ ᴛᴏ sᴋɪᴘ ᴛᴏ ᴀ sᴘᴇᴄɪꜰɪᴄ ᴛʀᴀᴄᴋ ʙᴇᴄᴀᴜsᴇ ᴏꜰ ᴇɴᴀʙʟᴇᴅ **ʟᴏᴏᴘ ᴘʟᴀʏ**. ᴘʟᴇᴀsᴇ ᴅɪsᴀʙʟᴇ ʟᴏᴏᴘ ᴘʟᴀʏ ᴠɪᴀ `/loop disable` ᴛᴏ ᴜsᴇ ᴛʜɪs ꜰᴇᴀᴛᴜʀᴇ ᴍʏ ʟᴏᴠᴇ ​🌹​."
